/*
  This package provides core user facing Restate types
 */
syntax = "proto3";

package dev.restate.core;

option java_multiple_files = true;
option java_package = "dev.restate.generated.core";
option go_package = "restate.dev/sdk-go/pb/core";

message AwakeableIdentifier {
  string service_name = 1;
  bytes instance_key = 2;
  bytes invocation_id = 3;
  uint32 entry_index = 4;
}